# CPlusPlusBindings

./: .gitignore  CPlusPlusBinding.cabal  Makefile  Setup.hs
c-src/: A_C.cpp  A_C.h  Makefile
c-test/: Makefile  call_a  call_a.c
cpp-includes/: A.h
cpp-src/: A.cpp  Makefile
src/: Binding.chs  Binding.hs  BindingTest.chs  BindingTest.hs
