name: CPlusPlusBinding
version: 0.1.0.0
description:
  Test Binding
license: MIT
license-file: LICENSE
author: Aditya Siram
maintainer: aditya.siram@gmail.com
build-type: Custom
cabal-version: >=1.8

library
  exposed-modules: Binding
  build-depends: base
  build-tools: c2hs
  extensions: ForeignFunctionInterface
  hs-source-dirs: src
  ghc-options: -Wall

executable binding_test
  Main-Is: BindingTest.hs
  hs-source-dirs: src
  build-depends: base,CPlusPlusBinding
  ghc-options: -Wall -threaded -I./c-src -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lA_C" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  include-dirs: ./c-src ./cpp-includes
  ld-options: ./cpp-src/libA.a