name: CPlusPlusBinding
version: 0.1.0.0
description:
  Test Binding
license: MIT
license-file: LICENSE
author: Aditya Siram
maintainer: aditya.siram@gmail.com
build-type: Simple
cabal-version: >=1.8

library
  exposed-modules: Binding
  build-depends: base
  extensions: ForeignFunctionInterface
  hs-source-dirs: src
  ghc-options: -Wall -pgmlg++
  extra-libraries: stdc++
  include-dirs: ./c-src ./cpp-includes
  c-sources: cpp-src/A.cpp, c-src/A_C.cpp

executable binding_test
  Main-Is: BindingTest.hs
  hs-source-dirs: src
  build-depends: base,CPlusPlusBinding